Removed phone controller
Is now controlled with arrow keys instead

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="/socket.io/socket.io.js"></script>
   <meta charset="utf-8" />
-  <title>Outyard</title>
+  <title>Maze Delay</title>
   <p id="time">00:00</p>
   <style>
     * { padding: 0; margin: 0; }
