Fix for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <canvas id="myCanvas" width="1000" height="600" style="border: solid 2px #000; position: fixed; top: 5%; left: 15%""></canvas>
 
-  <script src="/laptop.js"></script>
+  <script src="./laptop.js"></script>
 
 </body>
 </html>
